--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -17,22 +17,21 @@
     --gray12:#f9f9f9;
 
     //Blue
-    --blue1:#0030cc;
-    --blue3:#003cff;
-    --blue5:#3363FF;
-    --blue8:#809eff;
+    --blue:#3363FF;
+    --dark-blue:#003cff;
+    --light-blue:#4d77ff;
 
     //pink
-    --pink5:#fb339b;
+    --pink:#fb339b;
 
     //Green
-    --green2:#34C759;
+    --green:#34C759;
 
     //Orange
-    --orange5:#ff8b34;
+    --orange:#ff8b34;
 
     //Purple
-    --purble5:#e18cf9;
+    --purble:#e18cf9;
 
     // Gradients
     // --gradiantGreenToBlue: linear-gradient(254.81deg, #1A50FF 8.13%, #1EE9B6 92.46%);
