--- a/src/scss/components/main/input/_selectField.scss
+++ b/src/scss/components/main/input/_selectField.scss
@@ -91,7 +91,7 @@
       padding: 8px 0;
       margin: 0;
       box-sizing: border-box;
-      border: 1px solid var(--lightGray);
+      border: 1px solid var(--light-gray);
       border-radius: 5px;
       max-height: 200px;
       overflow-y: auto;
@@ -104,7 +104,7 @@
         font: var(--f-bodySmall);
 
         &:hover {
-          background-color: var(--lightGray);
+          background-color: var(--light-gray);
         }
 
         & label {
@@ -113,7 +113,7 @@
           display: flex;
           cursor: pointer;
           justify-content: space-between;
-          border-bottom: 1px solid var(--lightGray);
+          border-bottom: 1px solid var(--light-gray);
         }
 
         & label span {
